Fix new Layout issues

--- a/src/components/css/NavItem.css
+++ b/src/components/css/NavItem.css
@@ -3,7 +3,7 @@
   font-size: 1.7rem;
   font-weight: 300;
   flex: 1 1 0;
-  height: 20px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
